# rtracer

./: CMakeLists.txt  READEME.md  README.md  Untitled Diagram.drawio  dockerfile
include/: camera.hpp  color.hpp  constants.hpp  datatypes.hpp  hittable.hpp  hittable_list.hpp  interval.hpp  material.hpp  ray.hpp  sphere.hpp  utils.hpp
src/: camera.cpp  color.cpp  hittable.cpp  hittable_list.cpp  interval.cpp  main.cpp  material.cpp  sphere.cpp  utils.cpp
